--- a/src/app/auction-page/auction-page.component.html
+++ b/src/app/auction-page/auction-page.component.html
@@ -7,7 +7,7 @@
       class="question"
       mat-raised-button
       matTooltip="
-      This auction raffles accumulated Axion tokens between users, in proportion to the participants' bid in Ethereum. The auction price can't be lower than the Uniswap price minus 10%. Any leftover Axion from the auction rolls over into the next [weekly?] auction.
+      This auction raffles accumulated Axion tokens between users, in proportion to the participants' bid in Ethereum. The auction price can't be lower than the Uniswap price minus 10%. Any leftover Axion from the auction rolls over into the next weekly auction.
 
       When the user places a bid in ETH: 80% of the received ETH is instantly used to buy back Axion on Uniswap and the received AXN is used to replenish the Staking contract; 19% of the received ETH is the company's profit; 1% goes to The Eden Reforestation Project, with each $0.10 planting a tree.
 
