--- a/src/app/auction-page/auction-page.component.html
+++ b/src/app/auction-page/auction-page.component.html
@@ -203,13 +203,13 @@
 <section class="axn-section" *ngIf="account && showAuctions">
   <div class="axn-form-block p-20">
     <div class="axn-title-block axn-title-block-left">
-      <span class="axn-title">My Bets</span>
+      <span class="axn-title">My Bids</span>
     </div>
     <span
       class="axn-text t-a-c t-t-u axn-text-full-width"
       *ngIf="!hasAuctionList"
     >
-      You have no bets
+      You have no bids
     </span>
 
     <table
