--- a/src/scss/_tables.scss
+++ b/src/scss/_tables.scss
@@ -122,7 +122,7 @@
         padding-bottom: 20px;
       }
     }
-    tbody {
+    tbody {s
       tr:first-child {
         td {
           position: relative;
