--- a/src/app/staking-page/staking-page.component.html
+++ b/src/app/staking-page/staking-page.component.html
@@ -198,8 +198,8 @@
               <span
                 class="icon icon-flex axn-form-block-shares-text-min"
                 [ngClass]="{
-                  'icon_ok-1': hasBPD($index),
-                  icon_no: !hasBPD($index)
+                  'icon_ok-1': shouldCheckBoxForBPD($index),
+                  icon_no: !shouldCheckBoxForBPD($index)
                 }"
                 >BPD {{ $index + 1 }}</span
               >
