--- a/src/app/auction-page/auction-page.component.html
+++ b/src/app/auction-page/auction-page.component.html
@@ -325,7 +325,7 @@
     <div class="axn-title-block axn-title-block-left">
       <span class="axn-title">Auctions</span>
     </div>
-    <table class="standard-table with-weekly" cellpadding="0" cellspacing="0" border="0">
+    <table class="standard-table" cellpadding="0" cellspacing="0" border="0">
       <thead>
         <tr>
           <th>Date</th>
@@ -335,7 +335,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let auction of auctions">
+        <tr *ngFor="let auction of auctions" [ngClass]="{'weekly-auction': auction.isWeekly}">
           <td>{{ auction.time.date | date: "shortDate" }}</td>
           <td>
             <span
