--- a/src/scss/_dark-tables.scss
+++ b/src/scss/_dark-tables.scss
@@ -16,6 +16,12 @@
     }
   }
   tbody {
+    tr.weekly-auction {
+      td {
+        background: $clBlue-dark;
+        color: $clWhite-dark;
+      }
+    }
     td {
       color: $clTable-Tbody-Td-Text-dark;
       background: $clTable-Tbody-Td-Background-dark;
