--- a/src/app/staking-page/staking-page.component.html
+++ b/src/app/staking-page/staking-page.component.html
@@ -182,11 +182,11 @@
           </div>
           <div class="axn-form-block-shares">
             <!-- <span class="axn-form-block-shares-value cl-blue">{{
-              stakeDays | date: "dd.MM.y"
+              depositEndDate | date: "dd.MM.y"
             }}</span
             > -->
             <span class="axn-form-block-shares-value cl-blue">{{
-              stakeDays | date: "shortDate"
+              depositEndDate | date: "shortDate"
             }}</span
             ><br />
             <span class="axn-form-block-shares-text-min">Ends</span>
