--- a/src/scss/_tables.scss
+++ b/src/scss/_tables.scss
@@ -71,10 +71,20 @@
     }
   }
   tbody {
-    tr.weekly-auction {
+    tr.active-auction {
       td {
         background: $clBlue;
         color: $clWhite;
+      }
+    }
+    tr.weekly-auction {
+      span.label {
+        display: block;
+        font-size: 12px;
+      }
+
+      td.date {
+        padding: 6px 0 0 !important;
       }
     }
     td {
