Constitent capital letters in titles

--- a/src/app/auction-page/auction-page.component.html
+++ b/src/app/auction-page/auction-page.component.html
@@ -137,7 +137,7 @@
       [ngClass]="{ 'axn-form-border-dashed-bottom': referalAddress }"
     >
       <div class="axn-title-block">
-        <span class="axn-title">Referral program</span>
+        <span class="axn-title">Referral Program</span>
         <div
           class="question"
           #tooltip="matTooltip"
