--- a/src/app/staking-page/staking-page.component.html
+++ b/src/app/staking-page/staking-page.component.html
@@ -288,7 +288,7 @@
 >
   <div class="axn-form-block p-20">
     <div class="axn-title-block axn-title-block-left">
-      <span class="axn-title">Opened deposits</span>
+      <span class="axn-title">Opened Deposits</span>
     </div>
     <table class="standard-table" cellpadding="0" cellspacing="0" border="0">
       <thead>
@@ -397,7 +397,7 @@
 >
   <div class="axn-form-block p-20">
     <div class="axn-title-block axn-title-block-left">
-      <span class="axn-title">Deposit history</span>
+      <span class="axn-title">Deposit History</span>
     </div>
     <table class="standard-table" cellpadding="0" cellspacing="0" border="0">
       <thead>
