--- a/src/app/auction-page/auction-page.component.html
+++ b/src/app/auction-page/auction-page.component.html
@@ -137,7 +137,7 @@
       [ngClass]="{ 'axn-form-border-dashed-bottom': referalAddress }"
     >
       <div class="axn-title-block">
-        <span class="axn-title">Referral Program</span>
+        <span class="axn-title">Referral program</span>
         <div
           class="question"
           #tooltip="matTooltip"
@@ -203,7 +203,7 @@
 <section class="axn-section" *ngIf="account && showAuctions">
   <div class="axn-form-block p-20">
     <div class="axn-title-block axn-title-block-left">
-      <span class="axn-title">My Bids</span>
+      <span class="axn-title">My bids</span>
     </div>
     <span
       class="axn-text t-a-c t-t-u axn-text-full-width"
