--- a/src/app/staking-page/staking-page.component.html
+++ b/src/app/staking-page/staking-page.component.html
@@ -287,7 +287,7 @@
   *ngIf="depositsLists?.opened.length && tokensDecimals"
 >
   <div class="axn-form-block p-20">
-    <div class="axn-title-block axn-title-block-left">
+    <div class="axn-title-block">
       <span class="axn-title">Opened deposits</span>
     </div>
     <table class="standard-table" cellpadding="0" cellspacing="0" border="0">
@@ -396,7 +396,7 @@
   *ngIf="depositsLists?.closed.length && tokensDecimals"
 >
   <div class="axn-form-block p-20">
-    <div class="axn-title-block axn-title-block-left">
+    <div class="axn-title-block">
       <span class="axn-title">Deposit history</span>
     </div>
     <table class="standard-table" cellpadding="0" cellspacing="0" border="0">
