--- a/src/app/auction-page/auction-page.component.html
+++ b/src/app/auction-page/auction-page.component.html
@@ -206,7 +206,7 @@
 
 <section class="axn-section" *ngIf="account && showAuctions">
   <div class="axn-form-block p-20">
-    <div class="axn-title-block">
+    <div class="axn-title-block p-20">
       <span class="axn-title">My bids</span>
     </div>
     <span
@@ -326,7 +326,7 @@
 
 <section class="axn-section" *ngIf="account && showAuctions">
   <div class="axn-form-block p-20">
-    <div class="axn-title-block">
+    <div class="axn-title-block p-20">
       <span class="axn-title">Auctions</span>
       <div
         class="question"
