--- a/src/app/auction-page/auction-page.component.html
+++ b/src/app/auction-page/auction-page.component.html
@@ -141,7 +141,7 @@
       [ngClass]="{ 'axn-form-border-dashed-bottom': referalAddress }"
     >
       <div class="axn-title-block">
-        <span class="axn-title">Referral program</span>
+        <span class="axn-title">Referral Program</span>
         <div
           class="question"
           #tooltip="matTooltip"
@@ -207,7 +207,7 @@
 <section class="axn-section" *ngIf="account && showAuctions">
   <div class="axn-form-block p-20">
     <div class="axn-title-block p-20">
-      <span class="axn-title">My bids</span>
+      <span class="axn-title">My Bids</span>
     </div>
     <span
       class="axn-text t-a-c t-t-u axn-text-full-width"
