--- a/src/app/staking-page/staking-page.component.html
+++ b/src/app/staking-page/staking-page.component.html
@@ -1,6 +1,6 @@
 <section class="axn-section" *ngIf="account">
   <div class="axn-title-block">
-    <span class="axn-title">Create deposit</span>
+    <span class="axn-title">Create Deposit</span>
     <div
       class="question"
       mat-raised-button
@@ -288,7 +288,7 @@
 >
   <div class="axn-form-block p-20">
     <div class="axn-title-block p-20">
-      <span class="axn-title">Opened deposits</span>
+      <span class="axn-title">Opened Deposits</span>
     </div>
     <table class="standard-table" cellpadding="0" cellspacing="0" border="0">
       <thead>
@@ -397,7 +397,7 @@
 >
   <div class="axn-form-block p-20">
     <div class="axn-title-block p-20">
-      <span class="axn-title">Deposit history</span>
+      <span class="axn-title">Deposit History</span>
     </div>
     <table class="standard-table" cellpadding="0" cellspacing="0" border="0">
       <thead>
