--- a/src/app/staking-page/staking-page.component.html
+++ b/src/app/staking-page/staking-page.component.html
@@ -309,7 +309,7 @@
             <span
               matTooltipClass="table__tooltip"
               mat-raised-button
-              matTooltip="{{ deposit.start | date: 'short' }}"
+              matTooltip="{{ deposit.start | date: 'long' }}"
             >
               {{ deposit.start | date: "shortDate" }}</span
             >
@@ -318,7 +318,7 @@
             <span
               matTooltipClass="table__tooltip"
               mat-raised-button
-              matTooltip="{{ deposit.end | date: 'short' }}"
+              matTooltip="{{ deposit.end | date: 'long' }}"
             >
               {{ deposit.end | date: "shortDate" }}</span
             >
