--- a/src/app/auction-page/auction-page.component.html
+++ b/src/app/auction-page/auction-page.component.html
@@ -204,24 +204,17 @@
   </div>
 </section>
 
-<section class="axn-section" *ngIf="account && showAuctions">
+<section class="axn-section" *ngIf="account && showAuctions && hasAuctionList">
   <div class="axn-form-block p-20">
     <div class="axn-title-block p-20">
       <span class="axn-title">My Bids</span>
     </div>
-    <span
-      class="axn-text t-a-c t-t-u axn-text-full-width"
-      *ngIf="!hasAuctionList"
-    >
-      You have no bids
-    </span>
 
     <table
       class="standard-table"
       cellpadding="0"
       cellspacing="0"
       border="0"
-      *ngIf="hasAuctionList"
     >
       <thead>
         <tr>
@@ -308,15 +301,68 @@
               <span class="t-fz-14">&nbsp;&nbsp;WITHDRAW&nbsp;&nbsp;</span>
             </button>
             <span
-              class="icon icon-flex icon__ok t-cl-green t-t-u t-fz-14 m-a"
-              *ngIf="auction.status === 'complete'"
-              >withdrawn</span
-            >
-            <span
               class="axn-text t-cl-purple t-t-u t-fz-14"
               *ngIf="auction.status === 'progress'"
               >in progress</span
             >
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</section>
+
+<section class="axn-section" *ngIf="account && showAuctions && hasWithdrawnAuctions">
+  <div class="axn-form-block p-20">
+    <div class="axn-title-block p-20">
+      <span class="axn-title">Withdrawn Bids</span>
+    </div>
+
+    <table
+      class="standard-table"
+      cellpadding="0"
+      cellspacing="0"
+      border="0"
+    >
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>AXN in pool</th>
+          <th>ETH in pool</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let auction of withdrawnAuctions">
+          <td>{{ auction.start_date | date: "shortDate" }}</td>
+          <td>
+            <span
+              matTooltipClass="table__tooltip"
+              mat-raised-button
+              matTooltip="{{
+                auction.axn_pool
+                  | bigNumberFormat: tokensDecimals['HEX2X']:true:false:18
+              }}"
+            >
+              {{
+                auction.axn_pool
+                  | bigNumberFormat: tokensDecimals["HEX2X"]:true:false:2
+              }}
+            </span>
+          </td>
+          <td>
+            <span
+              matTooltipClass="table__tooltip"
+              mat-raised-button
+              matTooltip="{{
+                auction.eth_pool
+                  | bigNumberFormat: tokensDecimals['ETH']:true:false:18
+              }}"
+            >
+              {{
+                auction.eth_pool
+                  | bigNumberFormat: tokensDecimals["ETH"]:true:false:2
+              }}
+            </span>
           </td>
         </tr>
       </tbody>
