Add read whitepaper button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -232,6 +232,15 @@
             </button>
         </div>
       </div>
+      <div class="axn-form-block axn-form-transparent">
+        <div class="axn-form-block-button">
+          <button class="axn-btn axn-btn-gray axn-btn-form"
+          (click)="downloadWhitePaper()"
+          >
+            <span class="axn-text icon-flex t-t-u">READ WHITEPAPER</span>
+          </button>
+        </div>
+      </div>
     </div>
   </section>
 </div>
