--- a/src/app/auction-page/auction-page.component.html
+++ b/src/app/auction-page/auction-page.component.html
@@ -315,7 +315,7 @@
 <section class="axn-section" *ngIf="account && showAuctions && hasWithdrawnBids">
   <div class="axn-form-block p-20">
     <div class="axn-title-block p-20">
-      <span class="axn-title">Withdrawn Bids</span>
+      <span class="axn-title">Bid History</span>
     </div>
 
     <table
