--- a/src/app/auction-page/auction-page.component.html
+++ b/src/app/auction-page/auction-page.component.html
@@ -205,7 +205,7 @@
 </section>
 
 <section class="axn-section" *ngIf="account && showAuctions && hasActiveBids">
-  <div class="axn-form-block p-20 table-container">
+  <div class="axn-form-block-table p-20">
     <div class="axn-title-block p-20">
       <span class="axn-title">My Bids</span>
     </div>
@@ -313,7 +313,7 @@
 </section>
 
 <section class="axn-section" *ngIf="account && showAuctions && hasWithdrawnBids">
-  <div class="axn-form-block p-20 table-container">
+  <div class="axn-form-block-table p-20">
     <div class="axn-title-block p-20">
       <span class="axn-title">Bid History</span>
     </div>
@@ -371,7 +371,7 @@
 </section>
 
 <section class="axn-section" *ngIf="account && showAuctions">
-  <div class="axn-form-block p-20 table-container">
+  <div class="axn-form-block-table p-20">
     <div class="axn-title-block p-20">
       <span class="axn-title">Auctions</span>
       <div
