--- a/src/app/staking-page/staking-page.component.html
+++ b/src/app/staking-page/staking-page.component.html
@@ -293,12 +293,12 @@
     <table class="standard-table" cellpadding="0" cellspacing="0" border="0">
       <thead>
         <tr>
-          <th>Start date</th>
-          <th>End date</th>
+          <th>Start</th>
+          <th>End</th>
           <th>Progress</th>
           <th>Principal</th>
           <th>Shares</th>
-          <th>BigPayDay</th>
+          <th>Big Pay Day</th>
           <th>Interest</th>
           <th width="10">&nbsp;</th>
         </tr>
@@ -390,6 +390,7 @@
               (click)="depositWithdraw(deposit)"
               [ngClass]="{ progress: deposit.withdrawProgress }"
               [disabled]="deposit.withdrawProgress"
+              *ngIf="!deposit.bpdWithdraw"
             >
               <span class="lds-ellipsis" *ngIf="deposit.withdrawProgress">
                 <span class="lds-ellipsis-container">
@@ -397,6 +398,22 @@
                 </span>
               </span>
               <span class="t-fw-light">&nbsp;&nbsp;Withdraw&nbsp;&nbsp;</span>
+            </button>
+          </td>
+          <td class="action-button">
+            <button
+              class="axn-btn axn-btn-gray"
+              (click)="bpdWithdraw(deposit)"
+              [ngClass]="{ progress: deposit.withdrawProgress }"
+              [disabled]="deposit.withdrawProgress"
+              *ngIf="deposit.bpdWithdraw"
+            >
+              <span class="lds-ellipsis" *ngIf="deposit.withdrawProgress">
+                <span class="lds-ellipsis-container">
+                  <span></span><span></span><span></span><span></span>
+                </span>
+              </span>
+              <span class="t-fw-light">&nbsp;&nbsp;Withdraw BPD&nbsp;&nbsp;</span>
             </button>
           </td>
         </tr>
@@ -416,10 +433,10 @@
     <table class="standard-table" cellpadding="0" cellspacing="0" border="0">
       <thead>
         <tr>
-          <th>Start date</th>
-          <th>End date</th>
+          <th>Start</th>
+          <th>End</th>
           <th>Principal</th>
-          <th>BigPayDay</th>
+          <th>Big Pay Day</th>
         </tr>
       </thead>
       <tbody>
