--- a/src/app/staking-page/staking-page.component.html
+++ b/src/app/staking-page/staking-page.component.html
@@ -132,7 +132,7 @@
               <span class="axn-form-block-shares-text">Share rate</span>
             </div>
           </div>
-          <div class="axn-form-base-2 p-l-10">
+          <div class="axn-form-base-4">
             <div class="axn-form-block-shares-right">
               <span
                 class="axn-form-block-shares-value-min"
