--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -82,13 +82,12 @@
       }
 
       &-2 {
-        float: right;
-        // display: grid;
-        // grid-template-columns: repeat(2, 1fr);
+        display: grid;	        
+        grid-template-columns: repeat(2, 1fr);
 
-        // @include b(900) {
-        //   grid-template-columns: 1fr;
-        // }
+        @include b(900) {
+          grid-template-columns: 1fr;
+        }
       }
 
       &-3 {
@@ -97,6 +96,10 @@
         @include b(900) {
           grid-template-columns: 1fr;
         }
+      }
+
+      &-4 {
+        float: right;
       }
     }
 
