--- a/src/app/auction-page/auction-page.component.html
+++ b/src/app/auction-page/auction-page.component.html
@@ -469,6 +469,76 @@
   </div>
 </section>
 
+<section class="axn-section" *ngIf="account && showAuctions">
+  <div class="axn-form-block p-20">
+    <div class="axn-title-block p-20">
+      <span class="axn-title">Completed Auctions</span>
+      <div
+        class="question"
+        #tooltip="matTooltip"
+        (click)="tooltip.toggle()"
+        mat-raised-button
+        matTooltip="Auctions run daily, with a weekly mega auction every Friday.
+        Each auction starts at 07:02 UTC / 23:02 PST and lasts for 24 hours."
+        matTooltipClass="question__tooltip"
+      ></div>
+    </div>
+    <table class="standard-table" cellpadding="0" cellspacing="0" border="0">
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>AXN in pool</th>
+          <th>ETH in pool</th>
+          <th>AXN per ETH</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let auction of completedAuctions" [ngClass]="{'weekly-auction': auction.isWeekly, 'active-auction': auction.time.state === 'progress'}">
+          <td class="date">
+            <span
+              matTooltipClass="table__tooltip"
+              mat-raised-button
+              matTooltip="{{ auction.time.date | date: 'long' }}"
+            >
+              {{ auction.time.date | date: "shortDate" }}<span class="label" *ngIf="auction.isWeekly">WEEKLY</span></span
+            >
+          </td>
+          <td>
+            <span
+              matTooltipClass="table__tooltip"
+              mat-raised-button
+              matTooltip="{{
+                auction.data.axn_pool
+                  | bigNumberFormat: tokensDecimals['HEX2X']:true:false:18
+              }}"
+            >
+              {{
+                auction.data.axn_pool
+                  | bigNumberFormat: tokensDecimals["HEX2X"]:true:false:2
+              }}
+            </span>
+          </td>
+          <td>
+            <span
+              matTooltipClass="table__tooltip"
+              mat-raised-button
+              matTooltip="{{
+                auction.data.eth_pool
+                  | bigNumberFormat: tokensDecimals['ETH']:true:false:18
+              }}"
+            >
+              {{
+                auction.data.eth_pool
+                  | bigNumberFormat: tokensDecimals["ETH"]:true:false:2
+              }}
+            </span>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</section>
+
 <ng-template #warningModal class="dialog-block" mat-dialog-content>
   <div class="dialog-block__content">
     <div class="dialog-title">Attention!</div>
