--- a/src/app/staking-page/staking-page.component.html
+++ b/src/app/staking-page/staking-page.component.html
@@ -231,7 +231,7 @@
 </section>
 
 <section class="axn-section" *ngIf="tableInfo">
-  <div class="axn-form-block-table p-20">
+  <div class="axn-form-block table-container p-20">
     <div class="axn-title-block p-20">
       <span class="axn-title">Big Pay Day</span>
       <div
@@ -286,7 +286,7 @@
   class="axn-section"
   *ngIf="depositsLists?.opened.length && tokensDecimals"
 >
-  <div class="axn-form-block-table p-20">
+  <div class="axn-form-block table-container p-20">
     <div class="axn-title-block p-20">
       <span class="axn-title">Opened Deposits</span>
     </div>
@@ -409,7 +409,7 @@
   class="axn-section"
   *ngIf="depositsLists?.closed.length && tokensDecimals"
 >
-  <div class="axn-form-block-table p-20">
+  <div class="axn-form-block table-container p-20">
     <div class="axn-title-block p-20">
       <span class="axn-title">Deposit History</span>
     </div>
