--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -358,10 +358,10 @@
           }
         }
       }
-
-      &-table {
-        overflow: auto;
-      }
     }
   }
+}
+
+.table-container {
+  overflow: auto;
 }
