--- a/src/app/staking-page/staking-page.component.html
+++ b/src/app/staking-page/staking-page.component.html
@@ -304,7 +304,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let deposit of depositsLists.opened">
+        <tr *ngFor="let deposit of depositsLists.matured">
           <td>
             <span
               matTooltipClass="table__tooltip"
