--- a/src/app/staking-page/staking-page.component.html
+++ b/src/app/staking-page/staking-page.component.html
@@ -299,6 +299,7 @@
           <th>Shares</th>
           <th>Big Pay Day</th>
           <th>Interest</th>
+          <th>Total AXN</th>
         </tr>
       </thead>
       <tbody>
@@ -359,6 +360,21 @@
             >
               {{
                 openedDepositTotals.interest
+                  | bigNumberFormat: tokensDecimals["HEX2X"]:true:false:2
+              }}&nbsp;AXN</span
+            >
+          </td>
+          <td>
+            <span
+              matTooltipClass="table__tooltip"
+              mat-raised-button
+              matTooltip="{{
+                openedDepositTotals.total
+                  | bigNumberFormat: tokensDecimals['HEX2X']:true:false:18
+              }}"
+            >
+              {{
+                openedDepositTotals.total
                   | bigNumberFormat: tokensDecimals["HEX2X"]:true:false:2
               }}&nbsp;AXN</span
             >
