Add missing table-container classes

--- a/src/app/staking-page/staking-page.component.html
+++ b/src/app/staking-page/staking-page.component.html
@@ -286,7 +286,7 @@
   class="axn-section"
   *ngIf="openedDepositTotals && tokensDecimals"
 >
-  <div class="axn-form-block p-20">
+  <div class="axn-form-block table-container p-20">
     <div class="axn-title-block p-20">
       <span class="axn-title">Opened Deposit Totals</span>
     </div>
@@ -387,7 +387,7 @@
   class="axn-section"
   *ngIf="depositsLists?.matured.length && tokensDecimals"
 >
-  <div class="axn-form-block p-20">
+  <div class="axn-form-block table-container p-20">
     <div class="axn-title-block p-20">
       <span class="axn-title">Matured Deposits</span>
     </div>
