--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
         />
       </a>
       <ul class="header-menu">
-        <li class="header-menu_item">
+        <li *ngIf="leftDaysInfoShow" class="header-menu_item">
           <a
             routerLink="claim"
             routerLinkActive="active-link"
