--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -205,7 +205,7 @@
 
   <section class="axn-section" *ngIf="!account">
     <div class="axn-container t-a-c">
-      <span class="axn-text">Axion Staking Platform - Enter by Metamask</span>
+      <span class="axn-text">Axion Staking Platform</span>
       <div class="axn-form-block axn-form-transparent">
         <div class="axn-form-block-button">
           <button
