--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,77 +21,10 @@ body {
   min-height: 100%;
 }
 
-.center {
-  display: block; 
-  margin-left: auto; 
-  margin-right: auto;
-}
-
-.rainbow {
-  
-  /* Font options */
- text-shadow: 2px 2px 4px #000000;
- font-size:20px;
- 
-  /* Chrome, Safari, Opera */
- -webkit-animation: rainbow 5s infinite; 
- 
- /* Internet Explorer */
- -ms-animation: rainbow 5s infinite;
- 
- /* Standar Syntax */
- animation: rainbow 5s infinite; 
-}
-
-/* Chrome, Safari, Opera */
-@-webkit-keyframes rainbow{
- 0%{color: orange;}	
- 10%{color: purple;}	
- 20%{color: red;}
- 30%{color: CadetBlue;}
- 40%{color: yellow;}
- 50%{color: coral;}
- 60%{color: green;}
- 70%{color: cyan;}
- 80%{color: DeepPink;}
- 90%{color: DodgerBlue;}
- 100%{color: orange;}
-}
-
-/* Internet Explorer */
-@-ms-keyframes rainbow{
-  0%{color: orange;}	
- 10%{color: purple;}	
- 20%{color: red;}
- 30%{color: CadetBlue;}
- 40%{color: yellow;}
- 50%{color: coral;}
- 60%{color: green;}
- 70%{color: cyan;}
- 80%{color: DeepPink;}
- 90%{color: DodgerBlue;}
- 100%{color: orange;}
-}
-
-/* Standar Syntax */
-@keyframes rainbow{
-   0%{color: orange;}	
- 10%{color: purple;}	
- 20%{color: red;}
- 30%{color: CadetBlue;}
- 40%{color: yellow;}
- 50%{color: coral;}
- 60%{color: green;}
- 70%{color: cyan;}
- 80%{color: DeepPink;}
- 90%{color: DodgerBlue;}
- 100%{color: orange;}
-}
-
 body {
   padding-top: 70px;
   margin: 0;
-  background: black;
+  background: $clBody-Background;
   font-family: "Roboto", sans-serif;
   color: $clBody-Text;
   padding-bottom: 50px;
